# tariffs

./: README.md  README.txt  requirements.txt  setup.cfg  setup.py
tariffs/: __init__.py  tariff.py
tests/: __init__.py  test_calculations.py
tests/fixtures/: bimodal_load_data.csv  block_tariff.json  demand_tariff.json  fixed_tariff.json  flat_tariff.json  scheduled_tariff.json  seasonal_tariff.json  supply_payment.json  test_load_data.csv  tou_tariff.json
