[metadata]
name = tariffs
author = John McKibbin
author_email = john.mckibbin@gmail.com
summary = Tariff toolkit for Python including tariff definition, validation, and cost calculation
description-file = README.txt
home-page = http://github.com/ecologic/tariffs/
license = BSD
keywords =
    tariff
    consumption
    electricity
    gas
    water
    bill
    cost

[files]
packages =
    tariffs

[bdist_wheel]
universal=1
